// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePopover /> SimplePopover with multiple props matches with snapshot 1`] = `
.c4 {
  margin-bottom: 0.3125rem;
}

.c6 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c8 {
  margin-top: 1.875rem;
}

.c5 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  font-size: 1.125rem;
  line-height: 1.2;
  margin-top: 0;
  margin-bottom: 0;
}

.c7 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  width: 2.5rem;
  height: 2.5rem;
  border: 0.125rem solid #222;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c1 >:last-child {
  margin-right: 0;
}

.c1 svg,
.c1 path {
  fill: #fff;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:hover,
.c1:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1:hover svg,
.c1:focus svg,
.c1:hover path,
.c1:focus path {
  fill: #fff;
}

.c1:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1:active svg,
.c1:active path {
  fill: #fff;
}

.c1:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1:disabled svg,
.c1:disabled path {
  fill: #fff;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c10:disabled {
  cursor: not-allowed;
}

.c10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c10 >:last-child {
  margin-right: 0;
}

.c10 svg,
.c10 path {
  fill: #222;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c10:hover,
.c10:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c10:hover svg,
.c10:focus svg,
.c10:hover path,
.c10:focus path {
  fill: #fff;
}

.c10:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c10:active svg,
.c10:active path {
  fill: #fff;
}

.c10:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c10:disabled svg,
.c10:disabled path {
  fill: #fff;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c11:disabled {
  cursor: not-allowed;
}

.c11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c11 >:last-child {
  margin-right: 0;
}

.c11 svg,
.c11 path {
  fill: #fff;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c11:hover,
.c11:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c11:hover svg,
.c11:focus svg,
.c11:hover path,
.c11:focus path {
  fill: #fff;
}

.c11:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c11:active svg,
.c11:active path {
  fill: #fff;
}

.c11:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c11:disabled svg,
.c11:disabled path {
  fill: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c3 {
  display: none;
  min-width: 5rem;
  min-height: 5rem;
  margin-right: 2.5rem;
  border-radius: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #bae8fd;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c9 > * + * {
  margin-top: 1.25rem;
}

@media (min-width:40rem) {
  .c5 {
    font-size: 1.265625rem;
  }
}

@media (min-width:67.5rem) {
  .c5 {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:40rem) {
  .c7 {
    font-size: 0.7901234567901234rem;
  }
}

@media (min-width:67.5rem) {
  .c7 {
    font-size: 0.7901234567901234rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 10rem;
    height: 2.5rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 2.5rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c10 {
    width: 10rem;
    height: 2.5rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c11 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c11 {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

@media (min-width:640px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:640px) {
  .c9 > * + * {
    margin-top: 0;
    margin-left: 1.25rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div
    className="c3"
  >
    <p>
      illus
    </p>
  </div>
  <div>
    <div
      className="c4"
    >
      <h2
        className="c5"
        id="popover-title"
      >
        This popover has a title
      </h2>
    </div>
    <div
      className="c6"
    >
      <p
        className="c7"
      >
        Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
      </p>
    </div>
    <div
      className="c8 c9"
    >
      <button
        className="c10"
        onClick={[Function]}
      >
        J’ai compris
      </button>
      <button
        className="c11"
        onClick={[Function]}
      >
        Mes préférences
      </button>
    </div>
  </div>
</div>
`;

exports[`<SimplePopover /> simple SimplePopover  matches with snapshot 1`] = `
.c3 {
  margin-bottom: 0.3125rem;
}

.c5 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c4 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  font-size: 1.125rem;
  line-height: 1.2;
  margin-top: 0;
  margin-bottom: 0;
}

.c6 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  width: 2.5rem;
  height: 2.5rem;
  border: 0.125rem solid #222;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c1 >:last-child {
  margin-right: 0;
}

.c1 svg,
.c1 path {
  fill: #fff;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1:hover,
.c1:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1:hover svg,
.c1:focus svg,
.c1:hover path,
.c1:focus path {
  fill: #fff;
}

.c1:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1:active svg,
.c1:active path {
  fill: #fff;
}

.c1:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1:disabled svg,
.c1:disabled path {
  fill: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

@media (min-width:40rem) {
  .c4 {
    font-size: 1.265625rem;
  }
}

@media (min-width:67.5rem) {
  .c4 {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:40rem) {
  .c6 {
    font-size: 0.7901234567901234rem;
  }
}

@media (min-width:67.5rem) {
  .c6 {
    font-size: 0.7901234567901234rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 10rem;
    height: 2.5rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 c2"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div>
    <div
      className="c3"
    >
      <h2
        className="c4"
        id="popover-title"
      >
        
      </h2>
    </div>
    <div
      className="c5"
    >
      <p
        className="c6"
      >
        
      </p>
    </div>
  </div>
</div>
`;
